--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -24,5 +24,8 @@
         <wm-nav-item name="nav_item9">
             <wm-anchor name="anchor9" iconclass="wi wi-file" caption="Forms DevDataEntry" on-click="Variables.goToPage_DevFormDataEntry.invoke()"></wm-anchor>
         </wm-nav-item>
+        <wm-nav-item name="nav_item9_1">
+            <wm-anchor name="anchor9_1" iconclass="wi wi-file" caption="Projects DevDataEntry" on-click="Variables.goToPage_ProjectsDevDataEntry.invoke()"></wm-anchor>
+        </wm-nav-item>
     </wm-nav>
 </wm-partial>
