Removed "filter by" from MyProjects page and updated query to not filter by municipality. Updated filter text to "View All" on Main page Files modified - [Main.html,Cx2QueryExecutorServiceImpl.java,MyProjects.html,cx2-queries.hbm.xml,QueryExecutionController.java,MyProjects.variables.json,cx2_query.json,Cx2QueryExecutorService.java,pages-config.json,servicedef.xml,pom.xml]

--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -25,8 +25,8 @@
                         <wm-composite name="composite1" show="bind:Variables.StandardUserMunicipalites.dataSet.content.length > 1">
                             <wm-label class="col-md-3 form-control-static" name="label2" caption="Filter Results" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container1">
-                                <wm-select name="selectStandardUserMunicipality" dataset="bind:Variables.StandardUserMunicipalites.dataSet" datafield="All Fields" displayfield="MunicipalityName" orderby="MunicipalityName:asc" placeholder="Select Municipality"
-                                on-change="selectStandardUserMunicipalityChange($event, $scope, newVal, oldVal)" datavalue="bind:Variables.StandardUserMunicipalites.dataSet.content.length > 1 ? null : Variables.StandardUserMunicipalites.firstRecord"></wm-select>
+                                <wm-select name="selectStandardUserMunicipality" dataset="bind:Variables.StandardUserMunicipalites.dataSet" datafield="All Fields" displayfield="MunicipalityName" orderby="MunicipalityName:asc" placeholder="View All" on-change="selectStandardUserMunicipalityChange($event, $scope, newVal, oldVal)"
+                                datavalue="bind:Variables.StandardUserMunicipalites.dataSet.content.length > 1 ? null : Variables.StandardUserMunicipalites.firstRecord"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
