--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -128,7 +128,7 @@
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn56">
                                                                 <wm-label caption="Require Vendor" name="label13_1"></wm-label>
                                                                 <wm-select show="true" datavalue="bind:Variables.CurrentFormObj.dataSet.data[$i].vendorSelection &amp;&amp; Variables.CurrentFormObj.dataSet.data[$i].multipleVendors ? 'Multiple' : (Variables.CurrentFormObj.dataSet.data[$i].vendorSelection ? 'Single' : 'None')"
-                                                                dataset="None,Single,Multiple" on-change="gisOptionSelectChange($event, $scope, newVal, oldVal)" name="selectVendorOption" hint="This enables adding a company registered in CivicXpress to the form. You can allow for one or many companies"></wm-select>
+                                                                dataset="None,Single,Multiple" name="selectVendorOption" hint="This enables adding a company registered in CivicXpress to the form. You can allow for one or many companies"></wm-select>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn57">
                                                                 <wm-form-field name="inspections" displayname="Allow Inspections" show="true" primary-key="false" generator="assigned" key="inspections" type="boolean" widget="checkbox" placeholder="" hint="This enables inspections as part of the form process"></wm-form-field>
